pracaInz/force-app/main/default/objects/Shipment__c/fields/Destination_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Destination_Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Destination Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Shipments (Destination Warehouse)</relationshipLabel>
    <relationshipName>Destination_Shipments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>