pracaInz/force-app/main/default/objects/Shipment__c/fields/Loading_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Loading_Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Loading Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Loading_Shipments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>