pracaInz/force-app/main/default/objects/Shipment__c/fields/Max_Pallets__c.field-meta.xml
<CustomField>
    <fullName>Max_Pallets__c</fullName>
    <label>Max Pallets</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>