pracaInz/force-app/main/default/objects/Shipment__c/fields/Pallets_amount__c.field-meta.xml
<CustomField>
    <fullName>Pallets_amount__c</fullName>
    <inlineHelpText>Total amount of pallets assinged to this shipment.</inlineHelpText>
    <label>Pallets amount</label>
    <summarizedField>Delivery_Shipment__c.Pallet_amount__c</summarizedField>
    <summaryForeignKey>Delivery_Shipment__c.Shipment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>