pracaInz/force-app/main/default/objects/Shipment__c/fields/Shipment_cost__c.field-meta.xml
<CustomField>
    <fullName>Shipment_cost__c</fullName>
    <label>Shipment cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>