pracaInz/force-app/main/default/objects/Shipment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
                <default>true</default>
                <label>Planning</label>
            </value>
            <value>
                <fullName>Information provided</fullName>
            </value>
            <value>
                <fullName>Waiting for loading</fullName>
            </value>
            <value>
                <fullName>Loading</fullName>
            </value>
            <value>
                <fullName>In transport</fullName>
            </value>
            <value>
                <fullName>Awaiting unloading</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>