pracaInz/force-app/main/default/objects/Shipment__c/fields/Total_distance__c.field-meta.xml
<CustomField>
    <fullName>Total_distance__c</fullName>
    <inlineHelpText>Total distance between warehouses in KM</inlineHelpText>
    <label>Total distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>