pracaInz/force-app/main/default/objects/Shipment__c/fields/Total_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Time__c</fullName>
    <formula>TEXT(Hours__c) + &apos;:&apos; + TEXT(Minutes__c) + &apos;h&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time</label>
    <type>Text</type>
</CustomField>