pracaInz/force-app/main/default/objects/Shipment__c/validationRules/Max_Pallet_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Pallet_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>Pallets_amount__c &gt; Max_Pallets__c</errorConditionFormula>
    <errorMessage>Asigned pallets amount is greater than max pallets avaible for this shipment.</errorMessage>
</ValidationRule>